<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".Activities.MainActivity">

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_first_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_last_name"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        />
    
    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_address"
        app:layout_constraintTop_toBottomOf="@+id/etLastName"
        android:inputType="" />
    
    <EditText
        android:id="@+id/etCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        app:layout_constraintTop_toBottomOf="@+id/etAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/etState"
        />

    <EditText
        android:id="@+id/etState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/state"
        app:layout_constraintTop_toBottomOf="@+id/etAddress"
        app:layout_constraintStart_toEndOf="@id/etCity"
        app:layout_constraintEnd_toStartOf="@id/etZipCode"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/etZipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/zip_code"
        app:layout_constraintTop_toBottomOf="@id/etAddress"
        app:layout_constraintStart_toEndOf="@id/etState"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="number"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etCity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnRestart"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        android:layout_margin="8dp"
        android:onClick="submit"
        android:text="@string/submit"
        />

    <Button
        android:id="@+id/btnRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etState"
        app:layout_constraintStart_toEndOf="@id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        android:layout_margin="8dp"
        android:onClick="restart"
        android:text="@string/restart"
        />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
        app:layout_constraintBottom_toBottomOf="parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPersons"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>